--- a/Лаба1-2/kontacts.html
+++ b/Лаба1-2/kontacts.html
@@ -8,6 +8,7 @@
 <body>
 	<header>
 		<h1>
+		<img src="http://f0265677.xsph.ru/build/images/Logo.png" class="logo-img">
 			<b>
 				Меню:
 			</b>			
